# RayTracer

./: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  output.ppm  outputPhoton.xcf
.cache/clangd/index/: Camera.cpp.1C55A2097C10034B.idx  Camera.h.E1643A38E928770D.idx  ColorDBL.cpp.83E1225569B1FB7F.idx  ColorDBL.h.3A66734AEA8DC4D6.idx  LightSource.cpp.92E2C7C18D998668.idx  LightSource.h.9F51D7A32DEF4EAB.idx  Material.h.3D2D96B3BB34D352.idx  Object.h.750C0B35B4F2DDBD.idx  Pixel.cpp.C17197E8403BB0C0.idx  Pixel.h.599018A0DF35A2BF.idx  Ray.cpp.5065EEFECCACD147.idx  Ray.h.A47980632C4AC9D3.idx  Scene.h.6F2AF4F8C58E8826.idx  Structure.h.96C3674858EE01B4.idx  Tetrahedron.cpp.0B1682A78078E9D1.idx  Tetrahedron.h.29E84D8FF3D60D5D.idx  Triangle.cpp.BEAB5CE2E6AF82D8.idx  Triangle.h.6A8D099C896879FA.idx  _fixes.hpp.3CD84C99DFEA4E99.idx  _vectorize.hpp.AB1E019BD99C00C1.idx  common.hpp.794630532405C3E9.idx  compute_common.hpp.367C67CDF38496C3.idx  compute_vector_relational.hpp.764AA1F01C0ECE9D.idx  exponential.hpp.23E537C632EACB3D.idx  func_common.inl.5CB9500DBEB07081.idx  func_exponential.inl.DAB2B400BF6E57BA.idx  func_geometric.inl.5D2FBCC079DB4984.idx  func_integer.inl.49B5378B496B0E47.idx  (+124 more)
include/: Camera.h  ColorDBL.h  LightSource.h  Material.h  Object.h  PhotonMapper.h  Pixel.h  Polygon.h  Ray.h  Scene.h  Sphere.h  Structure.h  Surface.h  Tetrahedron.h  Triangle.h  Util.h  colorRGB.h  kdtree.h  ray.h
src/: Camera.cpp  ColorDBL.cpp  LightSource.cpp  PhotonMapper.cpp  Pixel.cpp  Polygon.cpp  Ray.cpp  Ray.txt  Sphere.cpp  Tetrahedron.cpp  Triangle.cpp  main.cpp  ray.cpp
(+1 files in other folders)
